Boutton de déconnexion

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,3 +1,10 @@
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-button name=boutton (click)="logout()" expand="block" color="primary">Déconnexion</ion-button>
+    </ion-toolbar>
+  </ion-header>
+
+
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
