Mise en place de l'inscription

--- a/src/app/connexion/connexion.page.html
+++ b/src/app/connexion/connexion.page.html
@@ -17,9 +17,6 @@
   
   <div class="ion-padding">
     <ion-button (click)="login()" expand="block" color="primary">Connexion</ion-button>
-  
-    <p style="text-align: center;">ou</p>
-  
-    <ion-button (click)="signup()" expand="block" color="tertiary">Inscription</ion-button>
+    <ion-button (click)="signUp()" expand="block" color="tertiary">Inscription</ion-button>
   </div>
 </ion-content>
