--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,8 +1,8 @@
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-button name=boutton (click)="logout()" expand="block" color="primary">Déconnexion</ion-button>
-    </ion-toolbar>
-  </ion-header>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-button name=boutton (click)="logout()" expand="block" color="primary">Déconnexion</ion-button>
+  </ion-toolbar>
+</ion-header>
 
 
 <ion-tabs>
@@ -13,9 +13,9 @@
       <ion-label>Tab One</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="produits">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>Produits</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
