--- a/src/app/ajouter-produit/ajouter-produit.page.html
+++ b/src/app/ajouter-produit/ajouter-produit.page.html
@@ -1,48 +1,41 @@
-
 <ion-header>
-
   <ion-toolbar color='primary'>
-
     <ion-title>Liste des produits</ion-title>
-
   </ion-toolbar>
-
 </ion-header>
-
-
 
 <ion-content>
 
-  <ion-item>
+  <div class="flex">
+    <div class="img-box">
+      <img [src]="image">
+    </div>
+  </div>
 
-    <ion-label>Nom</ion-label>
-
-    <ion-input [(ngModel)]="produit.nom" type="string" placeholder="coco nature"></ion-input>
-
-  </ion-item>
-
-  <ion-item>
-
-    <ion-label>Quantité</ion-label>
-
-    <ion-input [(ngModel)]='produit.quantite' type="number" placeholder="1"></ion-input>
-
-  </ion-item>
-
-  <ion-item>
-
-    <ion-label>Prix</ion-label>
-
-    <ion-input [(ngModel)]='produit.prix' type="number" placeholder="2"></ion-input>
-
-  </ion-item>
-
-
-
-  <ion-button (click)="ajoutProduit(produit)" expand="block" color="primary" >Ajouter</ion-button>
+  <ion-button (click)="ajouterPhoto('galerie')" color="tertiary" expand="block">
+    <ion-icon name="image" slot="start"></ion-icon>
+    Charger image
+  </ion-button>
+  <ion-button (click)="ajouterPhoto('camera')" color="secondary" expand="block">
+    <ion-icon name="camera" slot="start"></ion-icon>
+    Prendre une photo
+  </ion-button>
 
   
+  <ion-item>
+    <ion-label>Nom</ion-label>
+    <ion-input [(ngModel)]="produit.nom" type="string" placeholder="coco nature"></ion-input>
+  </ion-item>
 
+  <ion-item>
+    <ion-label>Quantité</ion-label>
+    <ion-input [(ngModel)]='produit.quantite' type="number" placeholder="1"></ion-input>
+  </ion-item>
 
+  <ion-item>
+    <ion-label>Prix</ion-label>
+    <ion-input [(ngModel)]='produit.prix' type="number" placeholder="2"></ion-input>
+  </ion-item>
 
+  <ion-button (click)="ajoutProduit(produit)" expand="block" color="primary" >Ajouter</ion-button>
 </ion-content>
