ajout de la photo à coté de l'image

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,10 +1,8 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab One
-    </ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-button name=boutton (click)="logout()" expand="block" color="primary">Déconnexion</ion-button>
   </ion-toolbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content>
     <ion-card class="welcome-card">
