--- a/src/app/produits/produits.page.html
+++ b/src/app/produits/produits.page.html
@@ -5,10 +5,27 @@
 </ion-header>
 
 <ion-content>
-  <div>
+
+  <ion-list>
     <ion-item *ngFor="let produit of produits">
-      <p>{{produit.nom}}</p>
+      <ion-thumbnail slot="start">
+        <ion-img [src]="produit.image"></ion-img>
+      </ion-thumbnail>
+      <ion-label>{{produit.nom}}</ion-label>
+
     </ion-item>
-  </div>
+  </ion-list>
+
+
+
+<!-- <ion-list lines="none">
+  <ion-item href="" *ngFor=>
+    <ion-thumbnail slot="start">
+      <ion-img [src]=""></ion-img>
+    </ion-thumbnail>
+    <ion-label></ion-label>
+  </ion-item>
+</ion-list> -->
+
 
 </ion-content>
