--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,8 +1,8 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar color="primary">
     <ion-button name=boutton (click)="logout()" expand="block" color="primary">Déconnexion</ion-button>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 
 <ion-tabs>
