--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,3 +1,3 @@
-ion-button {   /* juste selection de button avec un float right */
-    float: right;
-}
+// ion-button {   /* juste selection de button avec un float right */
+//     float: right;
+// }
