Bouton -> ajouter-produit et retour -> produits

--- a/src/app/ajouter-produit/ajouter-produit.page.html
+++ b/src/app/ajouter-produit/ajouter-produit.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar color='primary'>
-    <ion-title>Liste des produits</ion-title>
+    <ion-buttons id='retourProduits' slot="start">
+      <ion-back-button defaultHref="/produits" text="Page Produits"></ion-back-button>
+    </ion-buttons>
+    <ion-title id='titre'>Liste des produits</ion-title>
   </ion-toolbar>
 </ion-header>
 
