--- a/src/app/produits/produits.page.html
+++ b/src/app/produits/produits.page.html
@@ -1,6 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>produits</ion-title>
+  <ion-toolbar color='primary'>
+    <ion-button id='ajouter' routerLink="/ajouter-produit">
+      <ion-icon name='add'></ion-icon>
+    </ion-button>
+    <ion-title id='titre'>Liste des produits</ion-title>
+    
   </ion-toolbar>
 </ion-header>
 
