--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -18,7 +18,7 @@
       <ion-label>Produits</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="ajouter-produit">
+    <ion-tab-button tab="tab3">
       <ion-icon name="send"></ion-icon>
       <ion-label>Tab Three</ion-label>
     </ion-tab-button>
