--- a/src/app/produits/produits.page.html
+++ b/src/app/produits/produits.page.html
@@ -11,7 +11,7 @@
 <ion-content>
 
   <ion-list>
-    <ion-item (click)="afficherProduit()" *ngFor="let produit of produits">
+    <ion-item routerLink="/afficher-produit"  *ngFor="let produit of produits" (click)="afficherProduit(produit.nom)">
       <ion-thumbnail slot="start">
         <ion-img [src]="produit.image" (ionError)="imageDefaut($event)" ></ion-img>
       </ion-thumbnail>
