--- a/src/app/connexion/connexion.page.html
+++ b/src/app/connexion/connexion.page.html
@@ -16,7 +16,7 @@
   </ion-item>
   
   <div class="ion-padding">
-    <ion-button (click)="login()" expand="block" color="primary">Connexion</ion-button>
-    <ion-button (click)="signUp()" expand="block" color="tertiary">Inscription</ion-button>
+    <ion-button (click)="connexion()" expand="block" color="primary">Connexion</ion-button>
+    <ion-button (click)="enregistrement()" expand="block" color="tertiary">Inscription</ion-button>
   </div>
 </ion-content>
