--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-button name=boutton (click)="logout()" expand="block" color="primary">Déconnexion</ion-button>
+    <ion-button name=boutton (click)="deconnexion()" expand="block" color="primary">Déconnexion</ion-button>
   </ion-toolbar>
 </ion-header>
 
