--- a/src/app/connexion/connexion.page.html
+++ b/src/app/connexion/connexion.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Connexion</ion-title>
+  <ion-toolbar color='primary'>
+    <ion-title id='titre'>Connexion</ion-title>
   </ion-toolbar>
 </ion-header>
 
