--- a/src/app/afficher-produit/afficher-produit.page.scss
+++ b/src/app/afficher-produit/afficher-produit.page.scss
@@ -1,7 +1,10 @@
-#titre{
-    text-align: center;
-}
-#retourProduits{
-    float: left;
-}
+.disposition img {
+    //max-height: vh;
+    height: 20%;
+    width: 20%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+  }
   
