--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -9,9 +9,11 @@
 <ion-content>
 
   <div class="disposition">
-    <img [src]="produit.image" onerror="src='https://upload.wikimedia.org/wikipedia/commons/e/e6/Pas_d%27image_disponible.svg';" alt="Missing Image"/>
+    <img [src]="produit.image"
+      onerror="src='https://upload.wikimedia.org/wikipedia/commons/e/e6/Pas_d%27image_disponible.svg';"
+      alt="Missing Image" />
   </div>
-  
+
   <ion-item>
     <ion-label>Nom</ion-label>
     <ion-input [(ngModel)]="produit.nom" type="string" placeholder="produit.nom"></ion-input>
@@ -26,8 +28,11 @@
     <ion-label>Prix</ion-label>
     <ion-input [(ngModel)]='produit.prix' type="number" placeholder="produit.prix"></ion-input>
   </ion-item>
-  
-  <ion-button  shape="round" color="danger" size="small" (click)="RemoveRecord(produit)">
+
+  <ion-button shape="round" color="danger" size="medium" (click)="RemoveRecord(produit)">
     <ion-icon size="small" slot="icon-only" name="trash"></ion-icon>
+  </ion-button>
+  <ion-button shape="round" color="success" size="medium" (click)="UpdateRecord(produit)">
+    <ion-icon name="pencil" color="white"></ion-icon>
   </ion-button>
 </ion-content>
