Retour à la page produit quand article supprimé

--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -1,3 +1,4 @@
+<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourProduits' slot="start">
@@ -33,6 +34,6 @@
     <ion-icon size="small" slot="icon-only" name="trash"></ion-icon>
   </ion-button>
   <ion-button shape="round" color="success" size="medium" (click)="UpdateRecord(produit)">
-    <ion-icon name="pencil" color="white"></ion-icon>
+    <ion-icon src="\svg\save.svg" size="small" slot="icon-only" ></ion-icon>
   </ion-button>
 </ion-content>
