Remise des ancienne données si on revien en arrière

--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color='primary'>
-    <ion-buttons id='retourProduits' slot="start">
+    <ion-buttons id='retourProduits' slot="start" (click)="ancienneDonnee()">
       <ion-back-button defaultHref="/produits" text="Page Produits"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
