--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -1,38 +1,34 @@
 <ion-header>
   <ion-toolbar color='primary'>
-    <ion-buttons id='retourProduits' slot="start" (click)="ancienneDonnee()">
-      <ion-back-button defaultHref="/produits" text="Page Produits"></ion-back-button>
+    <ion-buttons id='retourProduits' slot="start" (click)="UpdateProduit(produit,'Si vous continuez, vous perdrez les modifications.')">
+      <ion-back-button  text="Page Produits"></ion-back-button>
     </ion-buttons>
+    
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
   <div class="disposition">
     <img [src]="produit.image"
       onerror="src='https://upload.wikimedia.org/wikipedia/commons/e/e6/Pas_d%27image_disponible.svg';"
       alt="Missing Image" />
   </div>
-
   <ion-item>
-    <ion-label>Nom</ion-label>
-    <ion-input [(ngModel)]="produit.nom" type="string" placeholder="produit.nom"></ion-input>
+    <ion-label position="floating">Nom</ion-label>
+    <ion-input [(ngModel)]="produit.nom" (change)="estChange=true" type="string"></ion-input>
   </ion-item>
-
   <ion-item>
-    <ion-label>Quantité</ion-label>
-    <ion-input [(ngModel)]='produit.quantite' type="number" placeholder="produit.quantite"></ion-input>
+    <ion-label position="floating">Quantité</ion-label>
+    <ion-input [(ngModel)]='produit.quantite' (change)="estChange=true" type="number"></ion-input>
   </ion-item>
-
   <ion-item>
-    <ion-label>Prix</ion-label>
-    <ion-input [(ngModel)]='produit.prix' type="number" placeholder="produit.prix"></ion-input>
+    <ion-label position="floating" >Prix</ion-label>
+    <ion-input [(ngModel)]='produit.prix' (change)="estChange=true" type="number"></ion-input>
   </ion-item>
-
-  <ion-button shape="round" color="danger" size="medium" (click)="RemoveRecord(produit)">
+  <ion-button shape="round" color="danger" size="medium" (click)="RemoveProduit(produit)">
     <ion-icon size="small" slot="icon-only" name="trash"></ion-icon>
   </ion-button>
-  <ion-button shape="round" color="success" size="medium" (click)="UpdateRecord(produit)">
-    <ion-icon src="\svg\save.svg" size="small" slot="icon-only" ></ion-icon>
+  <ion-button shape="round" color="success" size="medium" (click)="UpdateProduit(produit,'Êtes-vous sûr de vouloir modifier le produit?'
+  )">
+    <ion-icon src="\svg\save.svg" size="small" slot="icon-only"></ion-icon>
   </ion-button>
 </ion-content>
