--- a/src/app/ajouter-produit/ajouter-produit.page.html
+++ b/src/app/ajouter-produit/ajouter-produit.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourProduits' slot="start">
-      <ion-back-button defaultHref="/produits" text="Page Produits"></ion-back-button>
+      <ion-back-button defaultHref="/produits" text=""></ion-back-button>
     </ion-buttons>
-    <ion-title id='titre'>Liste des produits</ion-title>
+    <ion-title id='titre'>Ajouter un produit</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -17,14 +17,14 @@
 
   <ion-button (click)="ajouterPhoto('galerie')" color="tertiary" expand="block">
     <ion-icon name="image" slot="start"></ion-icon>
-    Charger image
+    Charger l'image
   </ion-button>
   <ion-button (click)="ajouterPhoto('camera')" color="secondary" expand="block">
     <ion-icon name="camera" slot="start"></ion-icon>
-    Prendre une photo
+    Prenez une photo
   </ion-button>
 
-  
+
   <ion-item>
     <ion-label>Nom</ion-label>
     <ion-input [(ngModel)]="produit.nom" type="string" placeholder="coco nature"></ion-input>
@@ -39,7 +39,8 @@
     <ion-label>Prix</ion-label>
     <ion-input [(ngModel)]='produit.prix' type="number" placeholder="2"></ion-input>
   </ion-item>
-  
-  <ion-button (click)="ajoutProduit(produit)" expand="block" color="primary" >
-    <ion-icon name="checkmark"></ion-icon>Ajouter</ion-button>
+
+  <ion-button (click)="ajoutProduit(produit)" expand="block" color="primary">
+    <ion-icon name="checkmark"></ion-icon>Ajouter
+  </ion-button>
 </ion-content>
