amélioration loader (await)

--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color='primary'>
-    <ion-buttons id='retourProduits' slot="start" (click)="bouttonRetour()">
+    <ion-buttons id='retourProduits' slot="start">
       <ion-back-button text=""></ion-back-button>
     </ion-buttons>
 
