Amélioration de la gestion d'image vide

--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -7,8 +7,7 @@
 </ion-header>
 <ion-content>
   <div class="disposition">
-    <img [src]="produit.imageURL"
-      onerror="src='https://upload.wikimedia.org/wikipedia/commons/e/e6/Pas_d%27image_disponible.svg';" alt="" />
+    <img [src]="produit.imageURL" alt="" />
   </div>
   <form [formGroup]="form" novalidate>
     <ion-item>
