--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -19,7 +19,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="clients">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="person"></ion-icon>
       <ion-label>Clients</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
