--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -9,7 +9,7 @@
   <div class="disposition" >
     <img [src]="image" alt=""/>
   </div>
-  <ion-button (click)="changerPhoto('galerie')" color="tertiary" expand="block"(click)="imageChange=true">
+  <ion-button (click)="changerPhoto('galerie')" color="tertiary" expand="block"(click)="imageChange=true; estChange=true">
     <ion-icon name="image" slot="start"></ion-icon>
     Changer l'image
   </ion-button>
